# metaxscaler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SUBMISSION.md  __init__.py  client.py  docker-compose.yml  env_client.py  inference.py  instructions.md  models.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
server/: Dockerfile  app.py  environment.py  graders.py  requirements.txt  task_generator.py
tasks/: todo.md
tests/: test_all.py  test_e2e.py  test_integration.py  test_openenv_env.py  test_server_app.py  test_yaml.py
