[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credit-approval-env"
version = "1.0.0"
description = "OpenEnv Credit Approval RL Environment — AI agents evaluate corporate loan applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Team Meta"},
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "openenv-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[project.scripts]
serve = "server.app:main"
server = "server.app:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
